--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </a>
       </div>
       <div class="main-right">
-        <img class="main-img1" src="img/1.png" alt="">
-        <img class="main-img2" src="img/1.png" alt="">
+        <img class="main-img1" src="/img/Dmrc Mothers Day/IMG_3216.jpeg" alt="">
+        <img class="main-img2" src="img/DMSRC Website/IMG_2585.jpg" alt="">
       </div>
     </main>
   </section>
@@ -82,7 +82,7 @@
     <!--=== section-1 - About  ===-->
     <section class="section-1">
       <div class="section-1-left">
-        <img src="img/2.png" alt="">
+        <img src="/img/DMSRC Website/IMG_9352.jpg" alt="">
       </div>
       <div class="section-1-right">
         <b>About us</b>
@@ -100,13 +100,13 @@
     <!-- ===  section-2  === -->
     <section class="section-2">
       <div class="section-2-left">
-        <img class="section-2-img" src="img/1.png" alt="">
+        <img class="section-2-img" src="img/Dmrc Mothers Day/66280f47-9bd9-42e6-b492-1f79e2f70112.jpeg" alt="">
       </div>
       <div class="section-2-right">
         <i>''</i>
         <h3>Tortor platea nunc lorem morbi pellentesque sed enim viverra venenatis, sem pellentesque massa nunc quis
           lectus.</h3>
-        <img src="img/2.png" alt="" class="signechar-img">
+        <!-- <img src="img/2.png" alt="" class="signechar-img"> -->
         <b>Yolanda Jenkins</b>
         <p>Founder & Head of School</p>
       </div>
@@ -120,19 +120,19 @@
       </div>
       <div class="section-3-down">
         <div class="down-1">
-          <img src="img/1.png" alt="">
+          <img src="img/DMSRC Website/_MG_1353.jpg" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
         </div>
         <div class="down-2">
-          <img src="img/1.png" alt="">
+          <img src="img/DMSRC Website/_MG_0927.jpg" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
         </div>
         <div class="down-3">
-          <img src="img/1.png" alt="">
+          <img src="img/DMSRC Website/IMG_7475.jpg" alt="">
           <h3>Infant</h3>
           <p>Blandit auctor felis habitasse aliquet est potenti ut urna eget orci pellentesque commodo vitae in sem</p>
           <a href="">Learn more</a>
@@ -231,17 +231,17 @@
           <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
         </div>
         <div class="se-5-right-box2">
-          <b>❤️</b>
+          <b>😎</b>
           <h3>Kindness</h3>
           <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
         </div>
         <div class="se-5-right-box3 ">
-          <b>❤️</b>
+          <b>💱</b>
           <h3>Kindness</h3>
           <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
         </div>
         <div class="se-5-right-box4">
-          <b>❤️</b>
+          <b>📝</b>
           <h3>Kindness</h3>
           <p>Nibh in sed venenatis, senectus fermentum nullam donec nulla quis ut facilisis</p>
         </div>
@@ -251,14 +251,14 @@
     <!-- ===  section-6  === -->
     <section class="section-6">
       <div class="section-6-up">
-        <img class="img-up-1" src="img/1.png" alt="">
-        <img class="img-up-2" src="img/2.png" alt="">
-        <img class="img-up-2" src="img/2.png" alt="">
+        <img class="img-up-1" src="img/DMSRC Website/IMG_3019.jpg" alt="">
+        <img class="img-up-2" src="img/DMSRC Website/_MG_0858.jpg" alt="">
+        <img class="img-up-2" src="img/DMSRC Website/_MG_1283.jpg" alt="">
       </div>
       <div class="section-6-down">
-        <img class="img-down-2" src="img/2.png" alt="">
-        <img class="img-down-2" src="img/2.png" alt="">
-        <img class="img-down-1" src="img/1.png" alt="">
+        <img class="img-down-2" src="img/Dmrc Mothers Day/797da439-82ed-4bc8-97a9-96165d7f837a.jpeg" alt="">
+        <img class="img-down-2" src="img/DMSRC Website/_MG_1281.jpg" alt="">
+        <img class="img-down-1" src="img/DMSRC Website/IMG_7466.jpg" alt="">
       </div>
     </section>
 
@@ -269,7 +269,7 @@
         <h2>Designed to help children realize their potential</h2>
       </div>
       <div class="section-7-down">
-        <iframe src="https://www.youtube.com/embed/XHOmBV4js_E" frameborder="0" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/NIk1-ck4c6Q?si=Qzk6kNoqMz8GJzYx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <!-- ===  section-8  === -->
@@ -310,17 +310,17 @@
       </div>
       <div class="section-9-down">
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="img/Dmrc Mothers Day/IMG_3342.jpeg" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="img/Dmrc Mothers Day/IMG_3420.jpeg" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
         <div class="se-9-down-box">
-          <img src="img/2.png" alt="">
+          <img src="img/Dmrc Mothers Day/8dfb6674-8c87-463c-ad14-1cd7ee0bf381.jpeg" alt="">
           <h4>Ella Stark</h4>
           <p>Lead teacher and 1-2 year olds</p>
         </div>
@@ -335,7 +335,7 @@
       </div>
       <div class="section-10-down">
         <div class="se-10-down-box1">
-          <img src="img/2.png" alt="">
+          <img src="img/Dmrc Mothers Day/66280f47-9bd9-42e6-b492-1f79e2f70112.jpeg" alt="">
         </div>
         <div class="se-10-box2">
           <i>''</i>
