--- a/Contact.html
+++ b/Contact.html
@@ -2,110 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact-Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="CSS/all-im.css">
-    <link rel="stylesheet" href="CSS/contact.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact-Page</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="CSS/all-im.css">
+  <link rel="stylesheet" href="CSS/contact.css">
 </head>
 
 <body>
 
-    <!-- === main page -->
-    <section class="section-main" id="home">
+  <!-- === main page -->
+  <section class="section-main" id="home">
 
-        <!--=== header  ===-->
-        <header class="header">
-            <div class="header-left">
-                <h2 class="header-h2">School Name</h2>
-            </div>
+    <!--=== header  ===-->
+    <header class="header">
+      <div class="header-left">
+        <h2 class="header-h2">School Name</h2>
+      </div>
 
-            <div class="menu-toggle" id="menuToggle">
-                ☰
-            </div>
+      <div class="menu-toggle" id="menuToggle">
+        ☰
+      </div>
 
-            <div class="header-senter" id="headerMenu">
-                <ul class="header-ul">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/About.html">About</a></li>
-                    <li><a href="/Program.html">Program</a></li>
-                    <li><a href="/Admission.html">Admission</a></li>
-                    <li><a href="#Contact.html">Contact</a></li>
-                </ul>
-            </div>
+      <div class="header-senter" id="headerMenu">
+        <ul class="header-ul">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/About.html">About</a></li>
+          <li><a href="/Program.html">Program</a></li>
+          <li><a href="/Admission.html">Admission</a></li>
+          <li><a href="#Contact.html">Contact</a></li>
+        </ul>
+      </div>
 
-            <div class="right">
-                <button class="header-button" type="submit">Enroll now</button>
-            </div>
-        </header>
+      <div class="right">
+        <button class="header-button" type="submit">Enroll now</button>
+      </div>
+    </header>
 
-        <!--===  men  ===-->
-        <main class="main">
-            <!-- Page Banner Section Start -->
-<div class="banner-section">
-  <div class="banner-content">
-    <div class="banner-label">Contact</div>
-    <h1>Have questions about<br> our programs?</h1>
-    <p>
-      Please contact us with any felis mauris quisque scelerisque, porta placerat pharetra, sodales vel vitae tincidunt mauris arcu placerat quis.
-    </p>
-  </div>
-  <div class="banner-bg"></div>
-</div>
-<!-- Page Banner Section End -->
+    <!--===  men  ===-->
+    <main class="main">
+      <!-- Page Banner Section Start -->
+      <div class="banner-section">
+        <div class="banner-content">
+          <div class="banner-label">Contact</div>
+          <h1>Have questions about<br> our programs?</h1>
+          <p>
+            Please contact us with any felis mauris quisque scelerisque, porta placerat pharetra, sodales vel vitae
+            tincidunt mauris arcu placerat quis.
+          </p>
+        </div>
+        <div class="banner-bg"></div>
+      </div>
+      <!-- Page Banner Section End -->
+    </main>
 
 
-        </main>
 
-         <!-- Contact Form Section -->
-  <div class="container">
-    <div class="sidebar">
-      <section>
-        <h2>General</h2>
-        <p>Blandit auctor felis habitasse aliquet est:</p>
-        <span class="email">info@example.com</span>
-      </section>
-      <section>
-        <h2>Parents</h2>
-        <p>Have any ullamcorper enim morbi volutpat feugiat? Get in touch:</p>
-        <span class="email">enrollment@example.com</span>
-      </section>
-      <section>
-        <h2>Vendor</h2>
-        <p>Interested in pretium nisi, ullamcorper enim morbi volutpat? Drop us a line:</p>
-        <span class="email">collab@example.com</span>
-      </section>
-      <div class="social">
-        <p>Keep in touch</p>
-        <span><i class="fa-brands fa-facebook"></i></span>
-        <span><i class="fa-brands fa-twitter"></i></span>
-        <span><i class="fa-brands fa-youtube"></i></span>
+
+
+    <!-- Contact Form Section -->
+    <div class="container">
+      <div class="sidebar">
+        <section>
+          <h2>General</h2>
+          <p>Blandit auctor felis habitasse aliquet est:</p>
+          <span class="email">info@example.com</span>
+        </section>
+        <hr class="hr">
+        <section>
+          <h2>Parents</h2>
+          <p>Have any ullamcorper enim morbi volutpat feugiat? Get in touch:</p>
+          <span class="email">enrollment@example.com</span>
+        </section>
+        <hr class="hr">
+        <section>
+          <h2>Vendor</h2>
+          <p>Interested in pretium nisi, ullamcorper enim morbi volutpat? Drop us a line:</p>
+          <span class="email">collab@example.com</span>
+        </section>
+        <div class="social">
+          <p>Keep in touch</p>
+          <span><i class="fa-brands fa-facebook"></i></span>
+          <span><i class="fa-brands fa-twitter"></i></span>
+          <span><i class="fa-brands fa-youtube"></i></span>
+        </div>
+      </div>
+      <div class="form-area">
+        <form>
+          <label>Parent's Name <span class="star">*</span></label>
+          <input type="text" required />
+          <label>Email <span class="star">*</span></label>
+          <input type="email" required />
+          <p class="question">I have a question about:</p>
+          <label><input type="radio" name="child" /> Infant</label><br />
+          <label><input type="radio" name="child" /> Toddler</label><br />
+          <label><input type="radio" name="child" /> Preschool</label>
+          <label>Questions or message <span class="star">*</span></label>
+          <textarea rows="3" required></textarea>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </div>
-    <div class="form-area">
-      <form>
-        <label>Parent's Name <span class="star">*</span></label>
-        <input type="text" required />
-        <label>Email <span class="star">*</span></label>
-        <input type="email" required />
-        <p class="question">I have a question about:</p>
-        <label><input type="radio" name="child" /> Infant</label><br />
-        <label><input type="radio" name="child" /> Toddler</label><br />
-        <label><input type="radio" name="child" /> Preschool</label>
-        <label>Questions or message <span class="star">*</span></label>
-        <textarea rows="3" required></textarea>
-        <button type="submit">Submit</button>
-      </form>
-    </div>
-  </div>
+
+
+  
+
 
   <!-- Address & Map Section -->
+   <hr class="hr-1">
   <div class="info-and-map">
     <div class="info-row">
       <div class="info-col">
         <h3>Address</h3>
-        <p>Demo St, Brooklyn, NY 11223, United States</p>
+        <p>Demo St, Brooklyn, </p>
+         <p></p> NY 11223, United States</p>
         <a class="directions" href="#" target="_blank">
           <span style="font-size:1.5em; color:#ff9355;">&#x1F517;</span> Get directions
         </a>
@@ -123,64 +136,70 @@
           +1 123-456-7891</p>
       </div>
     </div>
-    <div class="map-area">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9579548596294!2d-73.96258268459355!3d40.67817807933756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ba3225adfe1%3A0x7cef1b5bf2e4b4ea!2sBrooklyn%2C%20NY!5e0!3m2!1sen!2sus!4v1631881234567!5m2!1sen!2sus"
-        width="100%" height="350" allowfullscreen="" loading="lazy" style="border:0;">
-      </iframe>
-    </div>
   </div>
 
-    <!-- === footer  === -->
-    <footer>
-        <section class="footer">
-            <div class="footer-up">
-                <div class="footer-left">
-                    <h4>Day Care</h4>
-                    <p>
-                        Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
-                    </p>
-                    <ul class="footer-social">
-                        <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
-                    </ul>
-                </div>
-                <div class="footer-box-center">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Admission</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-box-center">
-                    <h4>Programs</h4>
-                    <ul>
-                        <li><a href="#">Half Day Care</a></li>
-                        <li><a href="#">Full Day Care</a></li>
-                        <li><a href="#">Special Events</a></li>
-                        <li><a href="#">Activities</a></li>
-                    </ul>
-                </div>
-                <div class="footer-right">
-                    <h4>Get in touch</h4>
-                    <address>
-                        Demo St, Brooklyn,<br>
-                        NY 11223, United States<br>
-                        +1 123-456-7890<br>
-                        <a href="mailto:mail@example.com">mail@example.com</a>
-                    </address>
-                </div>
-            </div>
-        </section>
-        <hr class="footer-hr">
-        <div class="footer-down">
-            <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+</section>
+
+
+
+  <div class="map-area">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9579548596294!2d-73.96258268459355!3d40.67817807933756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ba3225adfe1%3A0x7cef1b5bf2e4b4ea!2sBrooklyn%2C%20NY!5e0!3m2!1sen!2sus!4v1631881234567!5m2!1sen!2sus"
+      width="100%" height="450" allowfullscreen="" loading="lazy" style="border:0;">
+    </iframe>
+  </div>
+
+
+  <!-- === footer  === -->
+  <footer>
+    <section class="footer">
+      <div class="footer-up">
+        <div class="footer-left">
+          <h4>Day Care</h4>
+          <p>
+            Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
+          </p>
+          <ul class="footer-social">
+            <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
+            <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
+          </ul>
         </div>
-    </footer>
+        <div class="footer-box-center">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Admission</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-box-center">
+          <h4>Programs</h4>
+          <ul>
+            <li><a href="#">Half Day Care</a></li>
+            <li><a href="#">Full Day Care</a></li>
+            <li><a href="#">Special Events</a></li>
+            <li><a href="#">Activities</a></li>
+          </ul>
+        </div>
+        <div class="footer-right">
+          <h4>Get in touch</h4>
+          <address>
+            Demo St, Brooklyn,<br>
+            NY 11223, United States<br>
+            +1 123-456-7890<br>
+            <a href="mailto:mail@example.com">mail@example.com</a>
+          </address>
+        </div>
+      </div>
+    </section>
+    <hr class="footer-hr">
+    <div class="footer-down">
+      <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+    </div>
+  </footer>
 
 
 </body>
