--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact-Page</title>
+  <link rel="icon" type="image/x-icon" href="/img/image.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +21,9 @@
     <!--=== header  ===-->
     <header class="header">
       <div class="header-left">
-        <h2 class="header-h2">School Name</h2>
+        <h2 class="header-h2">
+          <img src="/img/image.png" alt="">DMRC
+        </h2>
       </div>
 
       <div class="menu-toggle" id="menuToggle">
@@ -108,37 +111,37 @@
     </div>
 
 
-  
 
 
-  <!-- Address & Map Section -->
-   <hr class="hr-1">
-  <div class="info-and-map">
-    <div class="info-row">
-      <div class="info-col">
-        <h3>Address</h3>
-        <p>Demo St, Brooklyn, </p>
-         <p></p> NY 11223, United States</p>
-        <a class="directions" href="#" target="_blank">
-          <span style="font-size:1.5em; color:#ff9355;">&#x1F517;</span> Get directions
-        </a>
-      </div>
-      <div class="info-col">
-        <h3>Work hours</h3>
-        <p>Mon-Thu: 9:00-4:00<br>
-          Fri-Sat: 9:00-3:00<br>
-          Sun: Close
-        </p>
-      </div>
-      <div class="info-col">
-        <h3>Phone</h3>
-        <p>+1 123-456-7890<br>
-          +1 123-456-7891</p>
+
+    <!-- Address & Map Section -->
+    <hr class="hr-1">
+    <div class="info-and-map">
+      <div class="info-row">
+        <div class="info-col">
+          <h3>Address</h3>
+          <p>Demo St, Brooklyn, </p>
+          <p></p> NY 11223, United States</p>
+          <a class="directions" href="#" target="_blank">
+            <span style="font-size:1.5em; color:#ff9355;">&#x1F517;</span> Get directions
+          </a>
+        </div>
+        <div class="info-col">
+          <h3>Work hours</h3>
+          <p>Mon-Thu: 9:00-4:00<br>
+            Fri-Sat: 9:00-3:00<br>
+            Sun: Close
+          </p>
+        </div>
+        <div class="info-col">
+          <h3>Phone</h3>
+          <p>+1 123-456-7890<br>
+            +1 123-456-7891</p>
+        </div>
       </div>
     </div>
-  </div>
 
-</section>
+  </section>
 
 
 
