--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>School Name</title>
+  <link rel="icon" type="image/x-icon" href="/img/image.png">
+  <title>DMRC</title>
 
   <!--  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,36 +20,42 @@
 
 <style>
 
+
 </style>
 
 <body>
-  
+
   <!-- === main page -->
   <section class="section-main" id="home">
     <!--===  header  ===-->
-     <header class="header">
-            <div class="header-left">
-                <h2 class="header-h2">School Name</h2>
-            </div>
+    <header class="header">
+      <div class="header-left">
+        <h2 class="header-h2">
+          <img src="/img/image.png" alt="">DMRC
+        </h2>
+      </div>
 
-            <div class="menu-toggle" id="menuToggle">
-                ☰
-            </div>
 
-            <div class="header-senter" id="headerMenu">
-                <ul class="header-ul">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="Program.html">Program</a></li>
-                    <li><a href="Admission.html">Admission</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
-                </ul>
-            </div>
+      <div class="menu-toggle" id="menuToggle">
+        ☰
+      </div>
 
-            <div class="right">
-                <button class="header-button" type="submit">Enroll now</button>
-            </div>
-        </header>
+      <div class="header-senter" id="headerMenu">
+        <ul class="header-ul">
+          <li><a href="#home">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Program.html">Program</a></li>
+          <li><a href="Admission.html">Admission</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="right">
+        <a href="/img/1.png" download class="download-btn">
+          Registration Form
+        </a>
+      </div>
+    </header>
 
     <!--===  men  ===-->
     <main class="main">
@@ -57,7 +64,9 @@
         <h1>A safe and joyful place for your lovely children</h1>
         <p>Donec scelerisque neque integer nulla habitant nec sem nam bibendum arcu rhoncus in consequat.</p>
         <div class="b">
-          <button>Enroll your kid</button>
+          <a class="download-btn" href="/img/1.png" download class="download-btn">
+              Registration Form
+            </a>
           <div class="rating">
             <span class="stars">★★★★★</span>
             <p class="source">4.8 rating on Google</p>
@@ -269,7 +278,10 @@
         <h2>Designed to help children realize their potential</h2>
       </div>
       <div class="section-7-down">
-        <iframe  src="https://www.youtube.com/embed/NIk1-ck4c6Q?si=Qzk6kNoqMz8GJzYx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/NIk1-ck4c6Q?si=Qzk6kNoqMz8GJzYx" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <!-- ===  section-8  === -->
@@ -352,7 +364,11 @@
     <section class="section-11">
       <h2>More than just a joyful place</h2>
       <p>Egestas pulvinar phasellus id odio viverra pharetra congue est eleifend aenean crasEnroll your kid</p>
-      <button>Enroll your kid</button>
+      <!-- <button src="/img/1.png" downlode >Students Registration Form</button> -->
+      <a href="/img/1.png" download class="download-btn">
+        Students Registration Form
+      </a>
+
     </section>
   </div>
 
@@ -409,5 +425,6 @@
 
 
 </body>
-  <script src="/JS/script.js"></script>
+<script src="/JS/script.js"></script>
+
 </html>
