--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img/image.png">
     <title>About</title>
     <!--  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +25,9 @@
         <!--=== header  ===-->
         <header class="header">
             <div class="header-left">
-                <h2 class="header-h2">School Name</h2>
+                <h2 class="header-h2">
+                    <img src="/img/image.png" alt="">DMRC
+                </h2>
             </div>
 
             <div class="menu-toggle" id="menuToggle">
@@ -55,8 +58,7 @@
         <!-- === section-1 -->
         <section class="section-1">
             <div class="section-1-left">
-                <img src="/img/Dmrc Mothers Day/IMG_3316.jpeg"
-                    class="main-image" alt="childcare">
+                <img src="/img/Dmrc Mothers Day/IMG_3316.jpeg" class="main-image" alt="childcare">
             </div>
             <div class="section-1-right">
                 <h2>We all need support through the most important period of our children:
@@ -109,8 +111,7 @@
 
             <div class="founder-content-grid">
                 <div class="founder-image-container">
-                    <img src="img/DMSRC Website/_MG_1257.jpg"
-                        alt="Founder holding child" class="founder-photo">
+                    <img src="img/DMSRC Website/_MG_1257.jpg" alt="Founder holding child" class="founder-photo">
                 </div>
 
                 <div class="founder-quote-section">
@@ -213,8 +214,8 @@
 
                 <!-- Teacher 1 -->
                 <div class="teacher-card">
-                    <img src="/img/Dmrc Mothers Day/66280f47-9bd9-42e6-b492-1f79e2f70112.jpeg"
-                        alt="Ella Stark" class="teacher-photo">
+                    <img src="/img/Dmrc Mothers Day/66280f47-9bd9-42e6-b492-1f79e2f70112.jpeg" alt="Ella Stark"
+                        class="teacher-photo">
                     <div class="teacher-info">
                         <h3 class="teacher-name">Ella Stark</h3>
                         <p class="teacher-role">Lead teacher with 1-2 year olds</p>
@@ -223,8 +224,8 @@
 
                 <!-- Teacher 2 -->
                 <div class="teacher-card">
-                    <img src="/img/Dmrc Mothers Day/ebbbbb17-1beb-4f16-aaf8-da1ebe781319.jpeg"
-                        alt="Harriet Bailey" class="teacher-photo">
+                    <img src="/img/Dmrc Mothers Day/ebbbbb17-1beb-4f16-aaf8-da1ebe781319.jpeg" alt="Harriet Bailey"
+                        class="teacher-photo">
                     <div class="teacher-info">
                         <h3 class="teacher-name">Harriet Bailey</h3>
                         <p class="teacher-role">Teacher: 2-3 year olds</p>
@@ -233,15 +234,15 @@
 
                 <!-- Teacher 3 -->
                 <div class="teacher-card">
-                    <img src="/img/Dmrc Mothers Day/ef6305b9-e488-4136-a3ec-12ccd6c6f374.jpeg"
-                        alt="Melinda Schiller" class="teacher-photo">
+                    <img src="/img/Dmrc Mothers Day/ef6305b9-e488-4136-a3ec-12ccd6c6f374.jpeg" alt="Melinda Schiller"
+                        class="teacher-photo">
                     <div class="teacher-info">
                         <h3 class="teacher-name">Melinda Schiller</h3>
                         <p class="teacher-role">Teacher: 3-4 year olds</p>
                     </div>
                 </div>
 
-              
+
             </div>
         </div>
     </section>
@@ -263,8 +264,8 @@
             <!-- Testimonial Content -->
             <div class="testimonial-content">
                 <div class="testimonial-image">
-                    <img src="/img/Dmrc Mothers Day/IMG_3285.jpeg"
-                        alt="Ramona Altenwerth with child" class="testimonial-photo">
+                    <img src="/img/Dmrc Mothers Day/IMG_3285.jpeg" alt="Ramona Altenwerth with child"
+                        class="testimonial-photo">
                 </div>
 
                 <div class="testimonial-text-area">
@@ -288,7 +289,9 @@
             <p class="cta-description">
                 Egestas pulvinar phasellus id odio viverra pharetra congue est eleifend aenean eros
             </p>
-            <a href="#" class="cta-button">Enroll your kid</a>
+            <a href="/img/1.png" download class="download-btn">
+                Registration Form
+            </a>
         </div>
     </section>
 
