--- a/about.html
+++ b/about.html
@@ -51,7 +51,11 @@
         <main class="main">
             <div class="main-div">
                 <b>About us</b>
-                <h1>We are here to help parents raise happy and healthy children</h1>
+                <h1>DMRC is operated to provide children with the highest quality early learning environment possible.
+                    Our research-based Montessori programme follows the guiding principles of the Association Montessori
+                    Internationale (AMI).
+                    Our mission is to nurture the curiosity and wonder that inspires learning so that children develop a
+                    deep understanding of the foundational skills essential to fulfilling their human potential.</h1>
             </div>
         </main>
 
