--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Admission</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/About.html">About Us</a></li>
+            <li><a href="/Admission.html">Admission</a></li>
+            <li><a href="/Contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-box-center">
