--- a/Contact.html
+++ b/Contact.html
@@ -53,8 +53,8 @@
           <div class="banner-label">Contact</div>
           <h1>Have questions about<br> our programs?</h1>
           <p>
-            Please contact us with any felis mauris quisque scelerisque, porta placerat pharetra, sodales vel vitae
-            tincidunt mauris arcu placerat quis.
+            Please reach out to us with any questions regarding enrollment, curriculum, or activities. Our team will be
+            happy to assist you and provide all the information you need.
           </p>
         </div>
         <div class="banner-bg"></div>
@@ -70,20 +70,20 @@
     <div class="container">
       <div class="sidebar">
         <section>
-          <h2>General</h2>
-          <p>Blandit auctor felis habitasse aliquet est:</p>
+          <h2>General Inquiries</h2>
+          <p>For any questions about DMRC programs, enrollment, or policies, reach out to us at:</p>
           <span class="email">info@example.com</span>
         </section>
         <hr class="hr">
         <section>
           <h2>Parents</h2>
-          <p>Have any ullamcorper enim morbi volutpat feugiat? Get in touch:</p>
+          <p>Have questions about your child’s age group or learning activities? Contact us:</p>
           <span class="email">enrollment@example.com</span>
         </section>
         <hr class="hr">
         <section>
-          <h2>Vendor</h2>
-          <p>Interested in pretium nisi, ullamcorper enim morbi volutpat? Drop us a line:</p>
+          <h2>Vendors / Collaborations</h2>
+          <p>Interested in partnering with DMRC? Get in touch:</p>
           <span class="email">collab@example.com</span>
         </section>
         <div class="social">
@@ -128,15 +128,15 @@
         </div>
         <div class="info-col">
           <h3>Work hours</h3>
-          <p>Mon-Thu: 9:00-4:00<br>
-            Fri-Sat: 9:00-3:00<br>
-            Sun: Close
+          <p>Mon-Thu:7:30 am – 5:00 pm<br>
+            Fri-Sat: 7:30 am – 5:00 pm<br>
+            Sat-Sun: Closed
           </p>
         </div>
         <div class="info-col">
           <h3>Phone</h3>
-          <p>+1 123-456-7890<br>
-            +1 123-456-7891</p>
+          <p>+255 7XX XXX XXX<br>
+            +255 7XX XXX XXX</p>
         </div>
       </div>
     </div>
@@ -172,9 +172,9 @@
         <div class="footer-box-center">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Admission</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About Us</a></li>
+            <li><a href="/Admission.html">Admission</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
