--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,9 @@
       </div>
 
       <div class="right">
-        <button class="header-button" type="submit">Enroll now</button>
+        <a href="/img/1.png" download class="download-btn">
+          Registration Form
+        </a>
       </div>
     </header>
 
@@ -158,9 +160,10 @@
     <section class="footer">
       <div class="footer-up">
         <div class="footer-left">
-          <h4>Day Care</h4>
+          <h4>DMRC</h4>
           <p>
-            Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
+            DMRC provides a nurturing Montessori environment where children develop independence, curiosity, and a love
+            for learning.
           </p>
           <ul class="footer-social">
             <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
@@ -200,7 +203,7 @@
     </section>
     <hr class="footer-hr">
     <div class="footer-down">
-      <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+      <p>&copy; 2025 DMRC. Powered by DMRC.</p>
     </div>
   </footer>
 
