--- a/Admission.html
+++ b/Admission.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admission-Page</title>
     <link rel="stylesheet" href="CSS/all-im.css">
-    <link rel="stylesheet" href="CSS/program.css">
+    <link rel="stylesheet" href="CSS/admission.css">
 </head>
 
 <body>
@@ -38,11 +38,40 @@
             </div>
         </header>
 
+
         <!--===  men  ===-->
         <main class="main">
-
+            <div class="main-left">
+                <p>Play. explore. learn.</p>
+                <h1>A safe and joyful place for your lovely children</h1>
+                <p>“We nurture curiosity and wonder so children grow with confidence, creativity, and a lifelong
+                    love of
+                    learning.”</p>
+                <div class="b">
+                    <a class="download-btn" href="img/DMRC Admission Form - Draft 2.pdf" download class="download-btn">
+                        Registration Form
+                    </a>
+                    <div class="rating">
+                        <span class="stars">★★★★★</span>
+                        <p class="source">4.8 rating on Google</p>
+                    </div>
+                </div>
+                <hr class="main-hr">
+                <a href="tel:1234567890" class="call-link">
+                    <i class="fa-solid fa-phone"></i>
+                    (123) 456-7890
+                </a>
+            </div>
+            <div class="main-right">
+                <img class="main-img1" src="/img/Dmrc Mothers Day/IMG_3216.jpeg" alt="">
+                <img class="main-img2" src="img/DMSRC Website/IMG_2585.jpg" alt="">
+            </div>
         </main>
     </section>
+
+    </main>
+    </section>
+
     <!--======= page-section ===========   -->
     <div class="page-section" id="about">
 
